# SparseLDL

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
CodeGenerator/: CodeGenerator.py  Formatter.py
CodeGenerator/templates/: Macros.jinja  SparseLDL.cpp.jinja
benchmark/: BenchmarkEigen.cpp  BenchmarkSparseLDL.cpp  CMakeLists.txt  SimpleEigenBenchmark.cpp
include/: GenerateRandomProblem.h  HelperFunctions.h
include/SparseLDL/: SparseLDL.h  Types.h
include/SparseLDL/CodeGen/: SparseLDLGen.h  SparseLDLGeneratedExample.h
include/SparseLDL/implementation/: Types.h
julia/: Manifest.toml  Project.toml  block-ldl.ipynb  block-ldl_simplified.ipynb
matlab/: SparseLDL.asv  SparseLDL.m  SparseLDL_.m  symPerm.m  symPerm.mlx
src/: SparseLDL.cpp  Types.cpp
test/: CMakeLists.txt  GenerateRandomProblem.h  TestLDL.cpp
